[project]
name = "train-delay-propagation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "adjusttext>=1.3.0",
  "geopandas>=1.1.1",
  "h3pandas>=0.3.0",
  "matplotlib>=3.10.3",
  "netcdf4>=1.7.2",
  "networkx>=3.4.2",
  "numpy>=2.2.6",
  "pandas>=2.3.1",
  "scikit-learn>=1.7.1",
  "scipy>=1.15.3",
  "tqdm>=4.67.1",
  "xarray>=2025.6.1",
]

[dependency-groups]
dev = ["ipython>=8.37.0"]
